--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 
-    <title>React App</title>
+    <title>Local Aid</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
